fix:fixed width search input, fixed visibility menu-button

--- a/Data/css/style.css
+++ b/Data/css/style.css
@@ -336,12 +336,12 @@ template {
   padding-top: 40px;
   padding-bottom: 40px;
 }
+.navbar-top__menu-button {
+  display: none;
+}
 .navbar__search {
   margin-right: auto;
   margin-left: 108px;
-}
-.navbar__menu-button {
-  display: none;
 }
 .navbar-bottom {
   background-color: #0A223D;
@@ -423,7 +423,7 @@ template {
   .container {
     max-width: 700px;
   }
-  .container .logo {
+  .logo {
     width: 132px;
   }
   .navbar-top {
@@ -432,7 +432,6 @@ template {
   }
   .navbar__search {
     margin-left: auto;
-    min-width: 340px;
   }
   .navbar-menu {
     padding-top: 22px;
@@ -441,6 +440,9 @@ template {
   .navbar-menu__link {
     font-size: 12px;
     line-height: 15px;
+  }
+  .search__input {
+    min-width: 340px;
   }
 }
 @media (min-width: 768px) {
@@ -455,6 +457,7 @@ template {
     display: flex;
     width: 16px;
     height: 11px;
+    padding: 0;
     align-items: center;
     justify-content: space-between;
     flex-direction: column;
