--- a/Data/sass/blocks/_media.sass
+++ b/Data/sass/blocks/_media.sass
@@ -4,7 +4,7 @@
 @media ( max-width: 992px )
   .container
     max-width: 700px
-    .logo
+  .logo
       width: 132px
   .navbar
     &-top
@@ -12,13 +12,15 @@
       padding-bottom: 30px
     &__search
       margin-left: auto 
-      min-width: 340px
     &-menu
       padding-top: 22px
       padding-bottom: 22px
       &__link
         font-size: 12px
         line-height: 15px
+  .search
+    &__input
+      min-width: 340px
 @media (min-width: 768px)
   .container
     &__search
@@ -32,6 +34,7 @@
       display: flex
       width: 16px
       height: 11px
+      padding: 0
       align-items: center
       justify-content: space-between
       flex-direction: column
